--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/lsb_favicon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ccb379" />
     <meta
@@ -53,7 +55,7 @@
     <meta name="msapplication-TileColor" content="#ccb379" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
     
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/lsb_favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -64,7 +66,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.png" or "favicon.png", "%PUBLIC_URL%/favicon.png" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
