--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html><html lang="pl"><head><meta charset="utf-8"/><link rel="icon" type="image/png" sizes="32x32" href="/favicon.png"/><link rel="apple-touch-icon" sizes="192x192" href="/logo192.png"/><link rel="apple-touch-icon" sizes="512x512" href="/logo512.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#ccb379"/><meta name="description" content="🎷 Lazy Swing Band - profesjonalny zespół jazzowy z Krakowa. Swingowa muzyka do tańca, koncerty, wesela, eventy firmowe. Sprawdź nasze albumy na Spotify i YouTube! 🎺"/><meta name="keywords" content="jazz, swing, Kraków, muzyka, zespół, koncerty, taniec, swing dance, lazy swing band, jazz kraków, zespół jazzowy, muzyka swingowa, koncerty jazzowe, eventy muzyczne, wesela jazz, imprezy firmowe"/><meta name="author" content="Lazy Swing Band"/><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"/><meta name="googlebot" content="index, follow"/><meta name="geo.region" content="PL-12"/><meta name="geo.placename" content="Kraków"/><meta name="geo.position" content="50.0647;19.9450"/><meta name="ICBM" content="50.0647, 19.9450"/><meta property="og:type" content="website"/><meta property="og:url" content="https://lazyswingband.com/"/><meta property="og:title" content="🎷 Lazy Swing Band - Profesjonalny Zespół Jazzowy z Krakowa 🎺"/><meta property="og:description" content="🎵 Zawodowi muzycy jazzowi z Krakowa grający swingową muzykę do tańca. Koncerty, wesela, eventy firmowe. Sprawdź nasze albumy na Spotify! 🎶"/><meta property="og:image" content="https://lazyswingband.com/logo-color.png"/><meta property="og:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa"/><meta property="og:image:width" content="709"/><meta property="og:image:height" content="709"/><meta property="og:locale" content="pl_PL"/><meta property="og:site_name" content="Lazy Swing Band"/><meta property="music:musician" content="https://lazyswingband.com"/><meta property="fb:admins" content="lazyswingersband"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:site" content="@lazyswingband"/><meta name="twitter:creator" content="@lazyswingband"/><meta name="twitter:url" content="https://lazyswingband.com/"/><meta name="twitter:title" content="🎷 Lazy Swing Band - Profesjonalny Zespół Jazzowy z Krakowa"/><meta name="twitter:description" content="🎵 Zawodowi muzycy jazzowi z Krakowa grający swingową muzykę do tańca. Koncerty, wesela, eventy firmowe. Sprawdź nasze albumy na Spotify! 🎶"/><meta name="twitter:image" content="https://lazyswingband.com/logo-color.png"/><meta name="twitter:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa"/><meta name="music:album" content="https://open.spotify.com/album/5XkBiCPt7nEQUnGjLSjG3P"/><meta name="music:song" content="https://music.youtube.com/playlist?list=OLAK5uy_lkk1xPxBViBc6BJV15Z1go2wJyJRYvNQI"/><meta name="application-name" content="Lazy Swing Band"/><meta name="msapplication-TileColor" content="#ccb379"/><meta name="msapplication-config" content="/browserconfig.xml"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>🎷 Lazy Swing Band - Profesjonalny Zespół Jazzowy z Krakowa | Koncerty, Wesela, Eventy</title><link rel="canonical" href="https://lazyswingband.com/"/><link rel="preload" href="/logo-color.png" as="image"/><link rel="preload" href="/static/js/main.96baa8d1.js" as="script"/><link rel="preload" href="/static/css/main.css" as="style"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><style>body{margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif}#root{min-height:100vh}.loading-indicator{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);z-index:9999;color:#ccb379;font-size:18px}</style><link rel="dns-prefetch" href="https://open.spotify.com"/><link rel="dns-prefetch" href="https://music.youtube.com"/><link rel="dns-prefetch" href="https://www.facebook.com"/><script type="application/ld+json">{
+<!doctype html><html lang="pl"><head><meta charset="utf-8"/><link rel="icon" type="image/png" sizes="32x32" href="/favicon.png"/><link rel="apple-touch-icon" sizes="192x192" href="/logo192.png"/><link rel="apple-touch-icon" sizes="512x512" href="/logo512.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#ccb379"/><meta name="description" content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Zespół na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity i muzyka przedwojenna. 🎺"/><meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół lindy hop, zespół balboa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz"/><meta name="author" content="Lazy Swing Band"/><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"/><meta name="googlebot" content="index, follow"/><meta name="geo.region" content="PL-12"/><meta name="geo.placename" content="Kraków"/><meta name="geo.position" content="50.0647;19.9450"/><meta name="ICBM" content="50.0647, 19.9450"/><meta property="og:type" content="website"/><meta property="og:url" content="https://lazyswingband.com/"/><meta property="og:title" content="🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby 🎺"/><meta property="og:description" content="🎵 Polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity! 🎶"/><meta property="og:image" content="https://lazyswingband.com/logo-color.png"/><meta property="og:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa"/><meta property="og:image:width" content="709"/><meta property="og:image:height" content="709"/><meta property="og:locale" content="pl_PL"/><meta property="og:site_name" content="Lazy Swing Band"/><meta property="music:musician" content="https://lazyswingband.com"/><meta property="fb:admins" content="lazyswingersband"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:site" content="@lazyswingband"/><meta name="twitter:creator" content="@lazyswingband"/><meta name="twitter:url" content="https://lazyswingband.com/"/><meta name="twitter:title" content="🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby"/><meta name="twitter:description" content="🎵 Polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity! 🎶"/><meta name="twitter:image" content="https://lazyswingband.com/logo-color.png"/><meta name="twitter:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa"/><meta name="music:album" content="https://open.spotify.com/album/5XkBiCPt7nEQUnGjLSjG3P"/><meta name="music:song" content="https://music.youtube.com/playlist?list=OLAK5uy_lkk1xPxBViBc6BJV15Z1go2wJyJRYvNQI"/><meta name="application-name" content="Lazy Swing Band"/><meta name="msapplication-TileColor" content="#ccb379"/><meta name="msapplication-config" content="/browserconfig.xml"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby | Kraków</title><link rel="canonical" href="https://lazyswingband.com/"/><link rel="preload" href="/logo-color.png" as="image"/><link rel="preload" href="/images/responsive/homepage-hero.webp" as="image"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link rel="prefetch" href="/images/responsive/about_desktop.webp"/><link rel="prefetch" href="/images/responsive/lazy_desktop.webp"/><style>body{margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif}#root{min-height:100vh}.loading-indicator{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);z-index:9999;color:#ccb379;font-size:18px}</style><link rel="dns-prefetch" href="https://open.spotify.com"/><link rel="dns-prefetch" href="https://music.youtube.com"/><link rel="dns-prefetch" href="https://www.facebook.com"/><link rel="dns-prefetch" href="https://www.instagram.com"/><link rel="dns-prefetch" href="https://www.youtube.com"/><link rel="dns-prefetch" href="https://fonts.googleapis.com"/><link rel="dns-prefetch" href="https://fonts.gstatic.com"/><script type="application/ld+json">{
       "@context": "https://schema.org",
       "@type": "MusicGroup",
       "name": "Lazy Swing Band",
       "alternateName": "LSB",
-      "description": "Profesjonalny zespół jazzowy z Krakowa grający swingową muzykę do tańca. Koncerty, wesela, eventy firmowe.",
+      "description": "Profesjonalny polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, Balboa, potańcówki, wigilie firmowe. Specjalizujemy się w muzyce przedwojennej, świątecznych hitach, występach do filmu i teatru.",
       "url": "https://lazyswingband.com",
       "logo": "https://lazyswingband.com/logo-color.png",
       "image": "https://lazyswingband.com/logo-color.png",
@@ -50,15 +50,53 @@
           "genre": "Polish Jazz"
         }
       ],
-      "offers": {
-        "@type": "Offer",
-        "category": "Usługi muzyczne",
-        "description": "Koncerty, wesela, eventy firmowe, festiwale jazzowe, bankiety",
-        "areaServed": {
-          "@type": "Country",
-          "name": "Polska"
+      "offers": [
+        {
+          "@type": "Offer",
+          "category": "Zespół na imprezy firmowe",
+          "description": "Zespół na firmówki, imprezy integracyjne, spotkania biznesowe w stylu retro i Wielki Gatsby",
+          "areaServed": {
+            "@type": "Country", 
+            "name": "Polska"
+          }
+        },
+        {
+          "@type": "Offer",
+          "category": "Zespół na bankiety",
+          "description": "Oprawę muzyczną bankietów, gal, uroczystości z muzyką swingową i jazzową",
+          "areaServed": {
+            "@type": "Country",
+            "name": "Polska"
+          }
+        },
+        {
+          "@type": "Offer", 
+          "category": "Zespół do tańca swingowego",
+          "description": "Muzyka do tańca Lindy Hop, Balboa, Charleston na potańcówki i warsztaty taneczne",
+          "areaServed": {
+            "@type": "Country",
+            "name": "Polska"
+          }
+        },
+        {
+          "@type": "Offer",
+          "category": "Zespół na wigilie firmowe",
+          "description": "Świąteczne hity, bożonarodzeniowe koncerty, wigilie firmowe z muzyką jazzową",
+          "areaServed": {
+            "@type": "Country",
+            "name": "Polska"
+          }
+        },
+        {
+          "@type": "Offer",
+          "category": "Zespół do filmu i teatru",
+          "description": "Muzyka przedwojenna, stylizowana oprawa muzyczna do produkcji filmowych i teatralnych",
+          "areaServed": {
+            "@type": "Country",
+            "name": "Polska"
+          }
         }
-      },
+      ],
       "contactPoint": {
         "@type": "ContactPoint",
         "contactType": "Booking",
