--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#ccb379" />
     <meta
       name="description"
-      content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Zespół na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity i muzyka przedwojenna. 🎺"
+      content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Kultywujemy tradycje muzyki swingowej lat 20. i 30., tworząc niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby. Specjalizujemy się w muzyce przedwojennej, świątecznych standardach jazzowych oraz repertuarze do tańca Lindy Hop i Balboa. 🎺"
     />
     <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół lindy hop, zespół balboa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz" />
     <meta name="author" content="Lazy Swing Band" />
@@ -25,8 +25,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lazyswingband.com/" />
-    <meta property="og:title" content="🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby 🎺" />
-    <meta property="og:description" content="🎵 Polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity! 🎶" />
+    <meta property="og:title" content="🎷 Lazy Swing Band - Profesjonalny Polski Zespół Jazzowy | Swing, Retro, Wielki Gatsby 🎺" />
+    <meta property="og:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca Lindy Hop i Balboa. 🎶" />
     <meta property="og:image" content="https://lazyswingband.com/logo-color.png" />
     <meta property="og:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa" />
     <meta property="og:image:width" content="709" />
@@ -41,8 +41,8 @@
     <meta name="twitter:site" content="@lazyswingband" />
     <meta name="twitter:creator" content="@lazyswingband" />
     <meta name="twitter:url" content="https://lazyswingband.com/" />
-    <meta name="twitter:title" content="🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby" />
-    <meta name="twitter:description" content="🎵 Polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, potańcówki, wigilie firmowe. Świąteczne hity! 🎶" />
+    <meta name="twitter:title" content="🎷 Lazy Swing Band - Profesjonalny Polski Zespół Jazzowy | Swing, Retro, Wielki Gatsby" />
+    <meta name="twitter:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca Lindy Hop i Balboa. 🎶" />
     <meta name="twitter:image" content="https://lazyswingband.com/logo-color.png" />
     <meta name="twitter:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa" />
     
@@ -70,7 +70,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>🎷 Lazy Swing Band - Zespół na Imprezy Firmowe, Bankiety | Retro, Wielki Gatsby | Kraków</title>
+    <title>🎷 Lazy Swing Band - Profesjonalny Polski Zespół Jazzowy | Kraków | Swing, Retro, Wielki Gatsby</title>
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://lazyswingband.com/" />
@@ -117,7 +117,7 @@
       "@type": "MusicGroup",
       "name": "Lazy Swing Band",
       "alternateName": "LSB",
-      "description": "Profesjonalny polski zespół jazzowy z Krakowa na imprezy firmowe, bankiety, wesela w stylu retro i Wielki Gatsby. Swingowa muzyka do tańca Lindy Hop, Balboa, potańcówki, wigilie firmowe. Specjalizujemy się w muzyce przedwojennej, świątecznych hitach, występach do filmu i teatru.",
+      "description": "Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca Lindy Hop i Balboa, muzyką przedwojenną oraz świątecznymi standardami jazzowymi.",
       "url": "https://lazyswingband.com",
       "logo": "https://lazyswingband.com/logo-color.png",
       "image": "https://lazyswingband.com/logo-color.png",
