--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png"/>
+    
+    <!-- Startup Images for iOS -->
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/logo512.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/logo512.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/logo512.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ccb379" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000000" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ccb379" />
     <meta
       name="description"
       content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Kultywujemy tradycje muzyki swingowej lat 20. i 30., tworząc niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby. Specjalizujemy się w muzyce przedwojennej, świątecznych standardach jazzowych oraz repertuarze do tańca Lindy Hop i Balboa. 🎺"
     />
+    
+    <!-- PWA Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Lazy Swing Band">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="msapplication-TileColor" content="#ccb379">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png">
     <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół lindy hop, zespół balboa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz" />
     <meta name="author" content="Lazy Swing Band" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
