--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ccb379" />
     <meta
       name="description"
-      content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Kultywujemy tradycje muzyki swingowej lat 20. i 30., tworząc niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby. Specjalizujemy się w muzyce przedwojennej, świątecznych standardach jazzowych oraz repertuarze do tańca Lindy Hop i Balboa. 🎺"
+      content="🎷 Lazy Swing Band - profesjonalny polski zespół jazzowy z Krakowa. Kultywujemy tradycje muzyki swingowej lat 20. i 30., tworząc niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby. Specjalizujemy się w muzyce przedwojennej, świątecznych standardach jazzowych, tańcu swingowym i kulturze swingowej. Profesjonalny zespół na eleganckie imprezy VIP, gale, bankiety i eventy firmowe. 🎺"
     />
     
     <!-- PWA Meta Tags -->
@@ -30,7 +30,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="msapplication-TileColor" content="#ccb379">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png">
-    <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół lindy hop, zespół balboa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz" />
+    <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół na imprezy VIP, taniec swingowy, kultura swingowa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz, eleganckie gale" />
     <meta name="author" content="Lazy Swing Band" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
@@ -45,7 +45,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lazyswingband.com/" />
     <meta property="og:title" content="🎷 Lazy Swing Band - Profesjonalny Polski Zespół Jazzowy | Swing, Retro, Wielki Gatsby 🎺" />
-    <meta property="og:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca Lindy Hop i Balboa. 🎶" />
+    <meta property="og:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca swingowego i kultury swingowej. Idealny zespół na imprezy VIP, eleganckie gale i bankiety. 🎶" />
     <meta property="og:image" content="https://lazyswingband.com/logo-color.png" />
     <meta property="og:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa" />
     <meta property="og:image:width" content="709" />
@@ -61,7 +61,7 @@
     <meta name="twitter:creator" content="@lazyswingband" />
     <meta name="twitter:url" content="https://lazyswingband.com/" />
     <meta name="twitter:title" content="🎷 Lazy Swing Band - Profesjonalny Polski Zespół Jazzowy | Swing, Retro, Wielki Gatsby" />
-    <meta name="twitter:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca Lindy Hop i Balboa. 🎶" />
+    <meta name="twitter:description" content="🎵 Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca swingowego i kultury swingowej. Idealny zespół na imprezy VIP, eleganckie gale i bankiety. 🎶" />
     <meta name="twitter:image" content="https://lazyswingband.com/logo-color.png" />
     <meta name="twitter:image:alt" content="Lazy Swing Band - Logo zespołu jazzowego z Krakowa" />
     
@@ -136,7 +136,7 @@
       "@type": "MusicGroup",
       "name": "Lazy Swing Band",
       "alternateName": "LSB",
-      "description": "Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca Lindy Hop i Balboa, muzyką przedwojenną oraz świątecznymi standardami jazzowymi.",
+      "description": "Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca swingowego i kultury swingowej, muzyką przedwojenną oraz świątecznymi standardami jazzowymi. Idealny na imprezy VIP, eleganckie gale i bankiety.",
       "url": "https://lazyswingband.com",
       "logo": "https://lazyswingband.com/logo-color.png",
       "image": "https://lazyswingband.com/logo-color.png",
@@ -205,7 +205,16 @@
         {
           "@type": "Offer", 
           "category": "Zespół do tańca swingowego",
-          "description": "Muzyka do tańca Lindy Hop, Balboa, Charleston na potańcówki i warsztaty taneczne",
+          "description": "Muzyka do tańca swingowego, Charleston i kultury swingowej na potańcówki i warsztaty taneczne",
+          "areaServed": {
+            "@type": "Country",
+            "name": "Polska"
+          }
+        },
+        {
+          "@type": "Offer",
+          "category": "Zespół na imprezy VIP",
+          "description": "Ekskluzywna oprawa muzyczna imprez VIP, eleganckich gal i bankietów w stylu retro",
           "areaServed": {
             "@type": "Country",
             "name": "Polska"
