SEO improvements: Update meta descriptions, keywords, manifest and sitemap
- Updated meta descriptions to focus on VIP events and corporate parties instead of niche dance terms
- Replaced 'Lindy Hop' and 'Balboa' with 'taniec swingowy' and 'kultura swingowa' for broader appeal
- Added 'zespół na imprezy VIP', 'lato z radiem', 'polskie radio' to keywords
- Updated Schema.org JSON-LD with VIP events offer and Radio collaboration mention
- Updated album names from 'Polish Swing For Lindy Hop' to 'Polish Swing Standards'
- Enhanced manifest.json descriptions for better PWA experience
- Updated sitemap.xml with current date (2025-08-25) and added missing #lato-z-radiem section
- Synchronized all changes between public/ and build/ directories

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="msapplication-TileColor" content="#ccb379">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png">
-    <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół na imprezy VIP, taniec swingowy, kultura swingowa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz, eleganckie gale" />
+    <meta name="keywords" content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół na imprezy VIP, taniec swingowy, kultura swingowa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz, eleganckie gale, lato z radiem, polskie radio" />
     <meta name="author" content="Lazy Swing Band" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
@@ -136,7 +136,7 @@
       "@type": "MusicGroup",
       "name": "Lazy Swing Band",
       "alternateName": "LSB",
-      "description": "Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca swingowego i kultury swingowej, muzyką przedwojenną oraz świątecznymi standardami jazzowymi. Idealny na imprezy VIP, eleganckie gale i bankiety.",
+      "description": "Profesjonalny polski zespół jazzowy z Krakowa kultywujący tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca swingowego i kultury swingowej, muzyką przedwojenną oraz świątecznymi standardami jazzowymi. Występowaliśmy w programie Lato z Radiem i Telewizją Polską. Idealny na imprezy VIP, eleganckie gale i bankiety.",
       "url": "https://lazyswingband.com",
       "logo": "https://lazyswingband.com/logo-color.png",
       "image": "https://lazyswingband.com/logo-color.png",
