Fix browser compatibility and performance issues
- Remove unsupported 'web-share' feature from YouTube iframe allow attributes
- Change logo-color.png preload to prefetch to prevent unused preload warning
- Add preload for critical resources: hero image and Mulish Medium font
- These changes improve browser compatibility and reduce console warnings

--- a/public/index.html
+++ b/public/index.html
@@ -95,10 +95,11 @@
     <link rel="canonical" href="https://lazyswingband.com/" />
     
     <!-- Preload critical resources for Core Web Vitals -->
-    <link rel="preload" href="%PUBLIC_URL%/logo-color.png" as="image" />
     <link rel="preload" href="%PUBLIC_URL%/images/responsive/homepage-hero.webp" as="image" />
+    <link rel="prefetch" href="%PUBLIC_URL%/logo-color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="%PUBLIC_URL%/assets/fonts/mulish-medium.woff2" as="font" type="font/woff2" crossorigin />
     
     <!-- Resource hints for better performance -->
     <link rel="prefetch" href="%PUBLIC_URL%/images/responsive/about_desktop.webp" />
