--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
     <link rel="prefetch" href="%PUBLIC_URL%/logo-color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" href="%PUBLIC_URL%/assets/fonts/mulish-medium.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="prefetch" href="%PUBLIC_URL%/assets/fonts/mulish-medium.woff2" as="font" type="font/woff2" crossorigin />
     
     <!-- Resource hints for better performance -->
     <link rel="prefetch" href="%PUBLIC_URL%/images/responsive/about_desktop.webp" />
