--- a/wigilie-firmowe/index.html
+++ b/wigilie-firmowe/index.html
@@ -423,7 +423,7 @@
                     <li>Repertuar dostosowany do eleganckiej atmosfery</li>
                     <li>Kolędy jazzowe i standardy świąteczne</li>
                     <li>Covery Sinatry, Deana Martina, Michaela Bublé, i innych</li>
-                    <li>Background music podczas kolacji</li>
+                    <li>Live background music podczas kolacji</li>
                     <li>2-3 godzinne sety muzyczne</li>
                     <li>Koordynacja z organizatorem</li>
                 </ul>
@@ -601,7 +601,7 @@
                 <a href="mailto:lazyswingband@gmail.com" class="cta-button">✉️ E-mail: lazyswingband@gmail.com</a>
             </div>
             <p style="margin-top: 20px; font-size: 0.9em;">
-                <strong>⏰ Szybka odpowiedź gwarantowana w ciągu 2 godzin!</strong>
+                <strong>⏰ Szybka odpowiedź gwarantowana!</strong>
             </p>
         </div>
 
