--- a/rider/en/index.html
+++ b/rider/en/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Technical rider for Lazy Swing Band - technical, organizational and staging requirements for performances. Contact, equipment, sound system, stage layout.">
     <meta name="keywords" content="technical rider, Lazy Swing Band, technical requirements, jazz band, performances, sound system, stage">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://lazyswingband.com/rider-en/">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png"/>
+    <link rel="canonical" href="https://lazyswingband.com/rider/en/">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png"/>
 
     <!-- Open Graph -->
     <meta property="og:title" content="Technical Rider - Lazy Swing Band">
     <meta property="og:description" content="Technical and organizational requirements for Lazy Swing Band performances">
     <meta property="og:image" content="https://lazyswingband.com/images/responsive/lazy-rider_desktop.webp">
-    <meta property="og:url" content="https://lazyswingband.com/rider-en/">
+    <meta property="og:url" content="https://lazyswingband.com/rider/en/">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card -->
@@ -25,12 +25,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../rider-styles.css">
-</head>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div id="app-content">
         <header>
+            <a href="/" class="nav-back">← Back to Home</a>
             <div class="music-note">♪</div>
             <h1>Lazy Swing Band</h1>
             <p>Technical Rider</p>
@@ -40,9 +40,9 @@
         <div class="photo-container">
             <div class="header-photo-bridge"></div>
             <picture>
-                <source media="(min-width: 768px)" srcset="../images/responsive/lazy-rider_desktop.webp">
-                <source media="(min-width: 480px)" srcset="../images/responsive/lazy-rider_tablet.webp">
-                <img src="../images/responsive/lazy-rider_mobile.webp" alt="Lazy Swing Band performing - jazz band photo" class="band-photo" loading="lazy" width="600" height="600">
+                <source media="(min-width: 768px)" srcset="../../images/responsive/lazy-rider_desktop.webp">
+                <source media="(min-width: 480px)" srcset="../../images/responsive/lazy-rider_tablet.webp">
+                <img src="../../images/responsive/lazy-rider_mobile.webp" alt="Lazy Swing Band performing - jazz band photo" class="band-photo" loading="lazy" width="600" height="600">
             </picture>
         </div>
         
@@ -173,9 +173,9 @@
                 <h2>Stage Layout</h2>
                 <div class="stage-container">
                     <picture>
-                        <source media="(min-width: 768px)" srcset="../images/responsive/stage-layout_desktop.webp">
-                        <source media="(min-width: 480px)" srcset="../images/responsive/stage-layout_tablet.webp">
-                        <img src="../images/responsive/stage-layout_mobile.webp" 
+                        <source media="(min-width: 768px)" srcset="../../images/responsive/stage-layout_desktop.webp">
+                        <source media="(min-width: 480px)" srcset="../../images/responsive/stage-layout_tablet.webp">
+                        <img src="../../images/responsive/stage-layout_mobile.webp" 
                              alt="Lazy Swing Band stage layout diagram - instrument placement: piano with monitor M4, drums, double bass, vocals with monitor M3, saxophone and trumpet with backing vocals microphone plus monitor M2, monitor M1 in center stage"
                              class="stage-layout-image" 
                              loading="lazy" 
