--- a/rider/pl/index.html
+++ b/rider/pl/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Rider techniczny zespołu Lazy Swing Band - wymagania techniczne, organizacyjne i sceniczne dla występów. Kontakt, sprzęt, nagłośnienie, układ sceny.">
     <meta name="keywords" content="rider techniczny, Lazy Swing Band, wymagania techniczne, zespół jazzowy, występy, nagłośnienie, scena">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://lazyswingband.com/rider-pl/">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png"/>
+    <link rel="canonical" href="https://lazyswingband.com/rider/pl/">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png"/>
 
     <!-- Open Graph -->
     <meta property="og:title" content="Rider Techniczny - Lazy Swing Band">
     <meta property="og:description" content="Wymagania techniczne i organizacyjne dla występów zespołu Lazy Swing Band">
     <meta property="og:image" content="https://lazyswingband.com/images/responsive/lazy-rider_desktop.webp">
-    <meta property="og:url" content="https://lazyswingband.com/rider-pl/">
+    <meta property="og:url" content="https://lazyswingband.com/rider/pl/">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card -->
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../rider-styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div id="app-content">
@@ -40,9 +40,9 @@
         <div class="photo-container">
             <div class="header-photo-bridge"></div>
             <picture>
-                <source media="(min-width: 768px)" srcset="../images/responsive/lazy-rider_desktop.webp">
-                <source media="(min-width: 480px)" srcset="../images/responsive/lazy-rider_tablet.webp">
-                <img src="../images/responsive/lazy-rider_mobile.webp" alt="Zespół Lazy Swing Band podczas występu - zdjęcie zespołu jazzowego" class="band-photo" loading="lazy" width="600" height="600">
+                <source media="(min-width: 768px)" srcset="../../images/responsive/lazy-rider_desktop.webp">
+                <source media="(min-width: 480px)" srcset="../../images/responsive/lazy-rider_tablet.webp">
+                <img src="../../images/responsive/lazy-rider_mobile.webp" alt="Zespół Lazy Swing Band podczas występu - zdjęcie zespołu jazzowego" class="band-photo" loading="lazy" width="600" height="600">
             </picture>
         </div>
         
@@ -172,9 +172,9 @@
                 <h2>Układ na Scenie</h2>
                 <div class="stage-container">
                     <picture>
-                        <source media="(min-width: 768px)" srcset="../images/responsive/stage-layout_desktop.webp">
-                        <source media="(min-width: 480px)" srcset="../images/responsive/stage-layout_tablet.webp">
-                        <img src="../images/responsive/stage-layout_mobile.webp" 
+                        <source media="(min-width: 768px)" srcset="../../images/responsive/stage-layout_desktop.webp">
+                        <source media="(min-width: 480px)" srcset="../../images/responsive/stage-layout_tablet.webp">
+                        <img src="../../images/responsive/stage-layout_mobile.webp" 
                              alt="Schemat układu zespołu Lazy Swing Band na scenie - rozmieszczenie instrumentów: piano z monitorem M4, perkusja, kontrabas, wokal z monitorem M3, saksofon i trąbka z mikrofonem do chórków oraz monitor M2, monitor M1 w centrum sceny"
                              class="stage-layout-image" 
                              loading="lazy" 
