--- a/wigilie-firmowe/index.html
+++ b/wigilie-firmowe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zespół na Wigilie Firmowe 2025 Kraków - Lazy Swing Band | Profesjonalna Oprawa Świąteczna</title>
-    <meta name="description" content="Zespół jazzowy na wigilie firmowe 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych imprez firmowych + koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry & Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN!">
+    <meta name="description" content="Zespół jazzowy na wigilie firmowe 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych imprez firmowych, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto.">
     <meta name="keywords" content="zespół na wigilię firmową kraków 2025, wigilia firmowa zespół jazzowy, koncert świąteczny dla firm, oprawa muzyczna wydarzenia świąteczne, zespół na święta firmowe, świąteczna impreza firmowa kraków, zespół jazzowy wigilia małopolska, oprawa muzyczna wigilia firmowa, zespół na bankiet świąteczny, christmas party band kraków, zespół na grudniowe imprezy firmowe, sinatra bublé christmas kraków, cała polska">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://lazyswingband.com/wigilie-firmowe/">
@@ -103,10 +103,10 @@
             <span class="sticky-cta-text">Ostatnie wolne terminy Grudzień 2025</span>
             <div class="sticky-cta-buttons">
                 <a href="tel:+48794210665" class="btn btn-primary btn-sm" aria-label="Zadzwoń teraz pod numer 794 210 665">
-                    <span aria-hidden="true">📞</span> Zadzwoń
+                    Zadzwoń
                 </a>
                 <a href="mailto:lazyswingband@gmail.com" class="btn btn-secondary btn-sm" aria-label="Wyślij e-mail na adres lazyswingband@gmail.com">
-                    <span aria-hidden="true">✉️</span> E-mail
+                    E-mail
                 </a>
             </div>
         </div>
@@ -132,7 +132,6 @@
         <!-- Hero Section -->
         <header class="hero">
             <div class="hero-badge" aria-label="Sezon 2025">
-                <span class="badge-icon" aria-hidden="true">🎄</span>
                 <span>Sezon 2025</span>
             </div>
             <h1 class="hero-title">
@@ -180,7 +179,6 @@
             <div class="services-grid">
                 <article class="service-card featured" aria-labelledby="service-1-title">
                     <div class="service-header">
-                        <span class="service-icon" aria-hidden="true">🎄</span>
                         <h3 id="service-1-title" class="service-title">Oprawa Muzyczna na Wydarzenia Świąteczne</h3>
                     </div>
                     <p class="service-description">
@@ -228,7 +226,6 @@
 
                 <article class="service-card" aria-labelledby="service-2-title">
                     <div class="service-header">
-                        <span class="service-icon" aria-hidden="true">🎼</span>
                         <h3 id="service-2-title" class="service-title">Koncert Świąteczny dla Firm</h3>
                     </div>
                     <p class="service-description">
@@ -290,32 +287,26 @@
             
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">🎷</span>
                     <h3 class="benefit-title">Doświadczenie</h3>
                     <p class="benefit-text">prawie 10 lat na scenie, współpraca z Polskim Radiem, setki wydarzeń firmowych</p>
                 </div>
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">🎵</span>
                     <h3 class="benefit-title">Unikalny Repertuar</h3>
                     <p class="benefit-text">Autorskie aranżacje kolęd, covery Sinatry, polskie i światowe standardy</p>
                 </div>
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">🎯</span>
                     <h3 class="benefit-title">Profesjonalizm</h3>
                     <p class="benefit-text">Punktualność, elegancki dress code, wykształceni muzycy</p>
                 </div>
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">🎭</span>
                     <h3 class="benefit-title">Atmosfera</h3>
                     <p class="benefit-text">Tworzenie magicznej świątecznej atmosfery, zaangażowanie publiczności</p>
                 </div>
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">📍</span>
                     <h3 class="benefit-title">Zasięg</h3>
                     <p class="benefit-text">Kraków, Małopolska, Cała Polska - realizujemy wydarzenia w całym regionie</p>
                 </div>
                 <div class="benefit-item">
-                    <span class="benefit-icon" aria-hidden="true">💎</span>
                     <h3 class="benefit-title">Jakość</h3>
                     <p class="benefit-text">Wysokiej klasy instrumenty, profesjonalni muzycy, perfekcyjne brzmienie</p>
                 </div>
@@ -488,7 +479,6 @@
 
         <!-- Urgency Banner -->
         <div class="urgency-banner" role="alert">
-            <div class="urgency-icon" aria-hidden="true">⚡</div>
             <div class="urgency-content">
                 <p class="urgency-title">UWAGA: Grudzień 2025 - ostatnie wolne terminy!</p>
                 <p class="urgency-text">Wigilie firmowe cieszą się ogromną popularnością. Zarezerwuj swój termin już dziś, 
@@ -506,14 +496,12 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="tel:+48794210665" class="btn btn-cta" aria-label="Zadzwoń teraz pod numer 794 210 665">
-                        <span class="btn-icon" aria-hidden="true">📞</span>
                         <span class="btn-text">
                             <span class="btn-label">Zadzwoń</span>
                             <span class="btn-value">+48 794 210 665</span>
                         </span>
                     </a>
                     <a href="mailto:lazyswingband@gmail.com" class="btn btn-cta" aria-label="Wyślij e-mail na adres lazyswingband@gmail.com">
-                        <span class="btn-icon" aria-hidden="true">✉️</span>
                         <span class="btn-text">
                             <span class="btn-label">E-mail</span>
                             <span class="btn-value">lazyswingband@gmail.com</span>
