format all and cache clean

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     />
     <meta
       name="description"
-      content="Zespół na wigilie firmowe 2025 Kraków - Lazy Swing Band. Świąteczny jazz, kolędy swingowe, muzyka na wigilię firmową. Profesjonalny zespół jazzowy z repertuarem świątecznym: Sinatra, Michael Bublé, jazzowe kolędy. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwacje na grudzień 2025."
+      content="Zespół na koncerty świąteczne 2025 Kraków - Lazy Swing Band. Świąteczny jazz, kolędy swingowe, profesjonalna oprawa muzyczna. Zespół jazzowy z repertuarem świątecznym: Sinatra, Michael Bublé, jazzowe kolędy. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwacje na grudzień 2025."
     />
 
     <!-- PWA Meta Tags -->
@@ -72,7 +72,7 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png" />
     <meta
       name="keywords"
-      content="zespół na wigilie firmowe 2025, zespół na wigilię firmową kraków, świąteczny zespół jazzowy, kolędy swingowe, zespół na święta boże narodzenie, zespół jazzowy na grudniowe imprezy, świąteczna muzyka na żywo kraków, zespół na firmówkę grudzień, jazzowe kolędy kraków, zespół swingowy małopolska cała polska, świąteczne covery sinatra michael bublé, zespół na bankiet świąteczny, muzyka na wigilię firmową, zespół jazz christmas kraków, świąteczne standardy jazzowe, zespół na koncert świąteczny, wigilia firmowa zespół kraków 2025, świąteczny swing band polska, zespół na imprezy grudniowe, christmas jazz kraków"
+      content="zespół na koncerty świąteczne 2025, zespół na koncert świąteczny kraków, świąteczny zespół jazzowy, kolędy swingowe, zespół na święta boże narodzenie, zespół jazzowy na grudniowe imprezy, świąteczna muzyka na żywo kraków, zespół na imprezy grudzień, jazzowe kolędy kraków, zespół swingowy małopolska cała polska, świąteczne covery sinatra michael bublé, zespół na bankiet świąteczny, muzyka na koncert świąteczny, zespół jazz christmas kraków, świąteczne standardy jazzowe, zespół na event świąteczny, koncert świąteczny zespół kraków 2025, świąteczny swing band polska, zespół na imprezy grudniowe, christmas jazz kraków"
     />
     <meta name="author" content="Lazy Swing Band" />
     <meta
@@ -92,11 +92,11 @@
     <meta property="og:url" content="https://lazyswingband.com/" />
     <meta
       property="og:title"
-      content="Zespół na Wigilie Firmowe 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
+      content="Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
     />
     <meta
       property="og:description"
-      content="Profesjonalny zespół jazzowy na wigilie firmowe 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
+      content="Profesjonalny zespół jazzowy na koncerty świąteczne 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
     />
     <meta
       property="og:image"
@@ -120,11 +120,11 @@
     <meta name="twitter:url" content="https://lazyswingband.com/" />
     <meta
       name="twitter:title"
-      content="Zespół na Wigilie Firmowe 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
+      content="Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
     />
     <meta
       name="twitter:description"
-      content="Profesjonalny zespół jazzowy na wigilie firmowe 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
+      content="Profesjonalny zespół jazzowy na koncerty świąteczne 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
     />
     <meta
       name="twitter:image"
@@ -166,8 +166,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Zespół na Wigilie Firmowe 2025 - Lazy Swing Band Kraków | Świąteczny Jazz
-      & Swing
+      Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny
+      Jazz & Swing
     </title>
 
     <!-- Canonical URL -->
@@ -267,7 +267,7 @@
         "@type": "MusicGroup",
         "name": "Lazy Swing Band",
         "alternateName": "LSB",
-        "description": "Polski zespół jazzowy specjalizujący się w świątecznym repertuarze na sezon 2025. Kultywujemy tradycje muzyki swingowej lat 20. i 30. z repertuarem świątecznych kolęd jazzowych, utworów Sinatry i Michaela Bublé. Idealny zespół na wigilie firmowe, świąteczne bankiety, koncerty bożonarodzeniowe w Krakowie, Małopolsce i całej Polsce. Występowaliśmy w programie Lato z Radiem i Telewizją Polską.",
+        "description": "Polski zespół jazzowy specjalizujący się w świątecznym repertuarze na sezon 2025. Kultywujemy tradycje muzyki swingowej lat 20. i 30. z repertuarem świątecznych kolęd jazzowych, utworów Sinatry i Michaela Bublé. Idealny zespół na koncerty świąteczne, świąteczne bankiety, wydarzenia bożonarodzeniowe w Krakowie, Małopolsce i całej Polsce. Występowaliśmy w programie Lato z Radiem i Telewizją Polską.",
         "url": "https://lazyswingband.com",
         "logo": "https://lazyswingband.com/logo-color.png",
         "image": "https://lazyswingband.com/logo-color.png",
@@ -353,8 +353,8 @@
           },
           {
             "@type": "Offer",
-            "category": "Zespół na wigilie firmowe",
-            "description": "Świąteczne hity, bożonarodzeniowe koncerty, wigilie firmowe z muzyką jazzową",
+            "category": "Zespół na koncerty świąteczne",
+            "description": "Świąteczne hity, bożonarodzeniowe koncerty, wydarzenia świąteczne z muzyką jazzową",
             "areaServed": {
               "@type": "Country",
               "name": "Polska"
@@ -427,7 +427,7 @@
           font-weight: bold;
         "
       >
-        Lazy Swing Band - Zespół na Wigilie Firmowe 2025 Kraków<br />
+        Lazy Swing Band - Zespół na Koncerty Świąteczne 2025 Kraków<br />
         Świąteczny jazz, kolędy swingowe, Sinatra & Michael Bublé -
         profesjonalna oprawa muzyczna na święta!<br />
         Kraków • Małopolska • Cała Polska<br />
